More element wise operations

--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNzz3B9YpwQFtmZU/yvm2NJ",
+      "authorship_tag": "ABX9TyMV0wcRpfHSpPPXk5PUB0m+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1588,7 +1588,7 @@
         "colab_type": "text"
       },
       "source": [
-        "The *relu* operation and addition are *element-wise* operations: operations that are applied independently to each entry in the tesnors being considered. This means these operations are highly amenable to massivly parrallel implementations."
+        "The *relu* operation and addition are *element-wise* operations: operations that are applied independently to each entry in the tesnors being considered. This means these operations are highly amenable to massivly parrallel implementations(*vectorized* implementations, a term that comes from vector processor supercomputer architecture)."
       ]
     },
     {
@@ -1608,19 +1608,6 @@
         "            x[i, j] = max(x[i, j], 0)\n",
         "    return x"
       ],
-      "execution_count": 41,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uZkmueuYXg63",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
       "execution_count": null,
       "outputs": []
     },
@@ -1631,7 +1618,55 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "The same for addition:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vmXR-g7JrIz4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def naive_add(x, y):\n",
+        "    assert len(x.shape) == 2\n",
+        "    assert x.shape == y.shape\n",
+        "\n",
+        "    x = x.copy()\n",
+        "    for i in range(x.shape[0]):\n",
+        "        for j in range(x.shape[1]):\n",
+        "            x[i, j] += y[i, j]\n",
+        "    return x"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YYVzwwmXsLUM",
+        "colab_type": "text"
+      },
+      "source": [
+        "So, in Numpy, you can do the following element-wise operations, and it will be blasing fast:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mFvPogCMswPq",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "import numpy as np\n",
+        "\n",
+        "z = x + y\n",
+        "\n",
+        "z = np.maximum(z, 0.)\n",
+        "\n",
+        "```"
       ]
     }
   ]
