more section headings

--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMV0wcRpfHSpPPXk5PUB0m+",
+      "authorship_tag": "ABX9TyOO05JP3GKzqwe52QRbfNUG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1639,7 +1639,7 @@
         "            x[i, j] += y[i, j]\n",
         "    return x"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1667,6 +1667,59 @@
         "z = np.maximum(z, 0.)\n",
         "\n",
         "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-HaQRgurEpU4",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.3.3 Tensor dot"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "acE03mxNEov7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z8w6sZ5DEx9w",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.3.4 Tensor reshaping"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qka5r9mfE68B",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.3.5 Geometric interpretation of tensor operations"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yb-I9qLwFE9-",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
