--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOO05JP3GKzqwe52QRbfNUG",
+      "authorship_tag": "ABX9TyN6HGebti1bgLMdDdphBNaU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1667,6 +1667,44 @@
         "z = np.maximum(z, 0.)\n",
         "\n",
         "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "esbVjKiaItoc",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 2.3.2 Broadcasting"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wadlWy7xIzeb",
+        "colab_type": "text"
+      },
+      "source": [
+        "The naive implementation of *naive_add* only supports the addition of 2D tensors with identical shapes. However the *Dense* layer, we added a 2D tensor with a vector. What happens when the shapes of the tensors added differ?\n",
+        "\n",
+        "When possible, the smaller tensor will be *broadcasted* to match the shape of the larger tensor. Broadcasting consists of two steps:\n",
+        "\n",
+        "1. Axes (called *broadcast axes*) are add to the smaller tensor to match the *ndim* of the largest tensor.\n",
+        "\n",
+        "2. The samller tensor is repeated alongside these new azes to match the full shape of the larger tensor.\n",
+        "\n",
+        "Consider X with shape (32, 10) and y with shape (10,). First we add an empty axis to y, whose shape become (1,10). Then, we repeat y 32 times alongside this new axis, so that we end up with a tensor of Y with shape (32, 10), where Y[i, :]==y for i in range(0, 32). At this point, we can proceed to ad X and Y, because they have the same shape. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i9hgycW0O8ew",
+        "colab_type": "text"
+      },
+      "source": [
+        "In terms of implementation, no new 2D tensor is created, because that would be terribly inefficient. But think of the vector being repeted 10 times alongside a new axis is a helpful mental model."
       ]
     },
     {
