Finished Broadcasting section

--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN6HGebti1bgLMdDdphBNaU",
+      "authorship_tag": "ABX9TyMJ4gZW7QSIAp/0xtIzVFOB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1706,6 +1706,66 @@
       "source": [
         "In terms of implementation, no new 2D tensor is created, because that would be terribly inefficient. But think of the vector being repeted 10 times alongside a new axis is a helpful mental model."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hHQl7lGgQGH4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def naive_add_matrix_and_vector(x, y):\n",
+        "    assert len(x.shape) == 2\n",
+        "    assert len(y.shape) == 1\n",
+        "    assert x.shape[1] == y.shape[0]\n",
+        "\n",
+        "    x = x.copy()\n",
+        "    for i in range(x.shape[0]):\n",
+        "        for j in range(x.shape[1]):\n",
+        "            x[i, j] += y[j]\n",
+        "    return x"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HFNReP25RLo9",
+        "colab_type": "text"
+      },
+      "source": [
+        "With broadcasting, you can generally apply two-tensor element-wise operations if one tensor has shape (a, b, ... n, n+1, ...m) and the other shape (n. n+1, ...m). The broadcasting will then automatically happen for axes a through n -1. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kMCUMJpIR98B",
+        "colab_type": "text"
+      },
+      "source": [
+        "Example of performing an element-wise *maximum* operation to two tensors of different shapes via brodcasting:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "grHXRU5vSR79",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "x = np.random.random((64, 3, 32, 10))\n",
+        "y = np.random.random((32, 10))\n",
+        "\n",
+        "z = np.maximum(x, y)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
