--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMJ4gZW7QSIAp/0xtIzVFOB",
+      "authorship_tag": "ABX9TyNrNB0J/4hzajAQE/YYE/QG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1778,6 +1778,44 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "omkIEgLbTdV7",
+        "colab_type": "text"
+      },
+      "source": [
+        "The dot operation, also called a *tensor product* (not to be confused with an element wise product). Contrary to element-wise operations, it combines entries in the input tensors. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7h2fzL4kUI3r",
+        "colab_type": "text"
+      },
+      "source": [
+        "An element wise product is perfomed with the * operator in Numpy, Keras, Theano, and TensorFlow. *dot* uses a different syntax in TensorFlow, but in both Numpy and Keras it's done using the standard *dot operator:\n",
+        "```python\n",
+        "import numpy as np\n",
+        "z = np.dot(x,y)\n",
+        "```\n",
+        "In math notation, you would use (.):\n",
+        "```python\n",
+        "z = x .y\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8U5U2dXkVlo6",
+        "colab_type": "text"
+      },
+      "source": [
+        "A naive implementation of the dot product implemented below:"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "acE03mxNEov7",
@@ -1785,10 +1823,98 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def naive_vector_dot(x, y):\n",
+        "    assert len(x.shape) == 1\n",
+        "    assert len(y.shape) == 1\n",
+        "    assert x.shape[0] == y.shape[0]\n",
+        "    z = 0\n",
+        "    for i in range(x.shape[0]):\n",
+        "        z += x[i] * y[i]\n",
+        "    return z"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Hdwi6jxjWfCq",
+        "colab_type": "text"
+      },
+      "source": [
+        "Notice the dot product between two vectors is a scalar and that only vectors with the same number of elements are compatible for a dot prouct. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZDBBmaKwXH9r",
+        "colab_type": "text"
+      },
+      "source": [
+        "You can also take a dot product between a matrix x and vector y, which returns a vector where the coefficients are dot products between y and the rows of x. :"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7_B7ojQHXcZY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np \n",
+        "\n",
+        "def naive_matrix_vector_dot(x, y):\n",
+        "    assert len(x.shape) == 2 \n",
+        "    assert len(y.shape) == 1\n",
+        "    assert x.shape[1] == y.shape[0]\n",
+        "\n",
+        "    z = np.zeroes(x.shape[0])\n",
+        "    for i in range(x.shape[0]):\n",
+        "        for j in range(x.shape[1]):\n",
+        "            z[i] += x[i, j] * y[j]\n",
+        "    return z"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hksziipgY33K",
+        "colab_type": "text"
+      },
+      "source": [
+        "An alternative approache could reuse the the code from the vector product:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rca9GocEZL3q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def naive_matrix_vector_dot(x, y):\n",
+        "    z = np.zeroes(x.shape[0])\n",
+        "    for i in range(x.shape[0]):\n",
+        "        z[i] = naive_vector_dot(x[i, :], y)\n",
+        "    return z"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EyNyOVRXZs7Y",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note that as soon as one of the two sensors has an *ndim*"
+      ]
     },
     {
       "cell_type": "markdown",
