finished tensor dot

--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNrNB0J/4hzajAQE/YYE/QG",
+      "authorship_tag": "ABX9TyMYUXDgIGaLhzz5Be1VEug9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1913,7 +1913,53 @@
         "colab_type": "text"
       },
       "source": [
-        "Note that as soon as one of the two sensors has an *ndim*"
+        "Note that as soon as one of the two sensors has an *ndim* greater than 1, *dot* is no longer symmetric, which is to say dot(x, y) isn't the same as dot(y, x)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fn2AC66jn3x7",
+        "colab_type": "text"
+      },
+      "source": [
+        "Of course, a dot product generalizes to tensors with an arbritary number of axes. The most common applications may be the dot product between two matrices. \n",
+        "Here's the naive implementation:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AMjbUf7wppMK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def naive_matrix_dot(x, y):\n",
+        "    assert len(x.shape) == 2\n",
+        "    assert len(y.shape) == 2\n",
+        "    assert x.shape[1] == y.shape[0]\n",
+        "\n",
+        "    z = np.zeros((x.shape[0]), y.shape[1])\n",
+        "    for i in range(x.shape[0]):\n",
+        "        for j in range(y.shape[1]):\n",
+        "            row_x = x[i, :]\n",
+        "            column_y = y[:, j]\n",
+        "            z[i, j] = naive_vector_dot(row_x, column_y)\n",
+        "    return z"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qznr45L1rG0W",
+        "colab_type": "text"
+      },
+      "source": [
+        "To understand dot-product\n",
+        "to do get photo of matrix multiplication"
       ]
     },
     {
