--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMYUXDgIGaLhzz5Be1VEug9",
+      "authorship_tag": "ABX9TyPZXwgsV0BymIWdTUy3DqFC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1970,6 +1970,215 @@
       },
       "source": [
         "#2.3.4 Tensor reshaping"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1JEBsHUk304Y",
+        "colab_type": "text"
+      },
+      "source": [
+        "A third type of tensor operation that's essential to understand is *tensor reshaping*. Which was used when preproccesed the digits data. :\n",
+        "```\n",
+        "trian_images = trains_images.reshape((60000, 28 * 28)\n",
+        "\n",
+        "```\n",
+        "Reshaping a tensor means rearranging its rows and columns to match a target shape. Examples:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sdWub4_-42hD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np\n",
+        "x = np.array([[0., 1.],\n",
+        "              [2., 3.],\n",
+        "              [4., 5.]])"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F3Z39mWZ5VDc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "8aaaf64e-4707-4ec0-b86a-befb909e7627"
+      },
+      "source": [
+        "print(x.shape)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(3, 2)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jwZKXbD25cDX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = x.reshape((6, 1))"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NdCF2e015jMU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 125
+        },
+        "outputId": "384e5a72-4d06-4e06-c7ea-ef5832a05cfb"
+      },
+      "source": [
+        "x"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.],\n",
+              "       [1.],\n",
+              "       [2.],\n",
+              "       [3.],\n",
+              "       [4.],\n",
+              "       [5.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xu9-6L7L5uKN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = x.reshape((2, 3))"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_YvSqnNp534I",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "d29fc9e3-57b6-4647-f80f-286e9f91797e"
+      },
+      "source": [
+        "x"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 1., 2.],\n",
+              "       [3., 4., 5.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6N7ezzMA6J0y",
+        "colab_type": "text"
+      },
+      "source": [
+        "A special case of reshaping that's commonly encountered is *transposition*. *Transposing* a matrix means exchanging its rows and its columns, so that x[i, :] becomes [:, i]:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7Rnh0g1O6zu0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = np.zeros((300, 20))"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-zgOYkq56-7W",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = np.transpose(x)"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UkAqihm07Eng",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "2a71ff51-8689-4be1-a949-a8b66b2b2e86"
+      },
+      "source": [
+        "print(x.shape)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(20, 300)\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
