--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPZXwgsV0BymIWdTUy3DqFC",
+      "authorship_tag": "ABX9TyM0fgJiPjH/ivy0Cdx08thx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2194,7 +2194,101 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Qr7Ph-oF7qLv",
+        "colab_type": "text"
+      },
+      "source": [
+        "Because the contents of the tensors manipulated by tensor operations can be interpreted as coordinates of points in some geometric space, all tensor operations have a geometric interpretation. First example addittion. \n",
+        "\n",
+        "```\n",
+        "A = [0.5, 1]\n",
+        "\n",
+        "```\n",
+        "It's a point in a 2D space.\n",
+        "\n",
+        "revisit "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rxuc18nn85qB",
+        "colab_type": "text"
+      },
+      "source": [
+        " * add figures\n",
+        " * vector addittion etc."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "yb-I9qLwFE9-",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.3.6 A geometric interpretation of deep learning"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ovxIvBgY829h",
+        "colab_type": "text"
+      },
+      "source": [
+        "You just learned that nueral networks consist entirely of chains of tensor operation and that all of these tensor operations are just gemetric transformations of the input data. One could distill a neural network down as a very complex geometric transformation in a high-dimensional space, a long a series of simple steps. \n",
+        "\n",
+        "#2.4 The engine of nueral networks:gradient-based optimization"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WykzRupF-jQI",
+        "colab_type": "text"
+      },
+      "source": [
+        "As you saw in the previous section, each neural layer from our first network example transforms its input data as follows:\n",
+        "````\n",
+        "output = relu(dot(W, input) + b)\n",
+        "````\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2CatM81f-7un",
+        "colab_type": "text"
+      },
+      "source": [
+        "In the above expression, *W* and *b* are tensors that are attributs of the layer. They're called the *weights* or *trainable parameters* of the layer ( the *kernel* and *bias* attributes, respectively). These weights contain the information learned by the network from exposure to training data. \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WYHRwlDUAIcN",
+        "colab_type": "text"
+      },
+      "source": [
+        "Initially, these weight matrices are filled with small random values( a step called *random initialization*) Of course, there's no reason to expect that relu(dot(W, input) + b), when *W* and *b* are randwom, will yield any useful representations. The resulting representations are meaningless--but they're a starting point. What comes next is to gradually adjust these weights, based on a feedback signal. The gradual adjustment, also called *training*, is basically the learning that machine learning is all about. \n",
+        "\n",
+        "This happens within within what's called a *training loop*, which works as follows. Repeat these steps in a loop, as long as necessary:\n",
+        "\n",
+        "1. Draw a batch of training samples x and corresponding targets y. \n",
+        "\n",
+        "2. Run the network on x(a step called the *forward pass*) to obtain predictions y_pred.\n",
+        "\n",
+        "3. Compute the loss of the network on the batch, a measure of mismatch between y_pred and y.\n",
+        "\n",
+        "4. Update all weights of the network in a way that slightly reduces the loss on this batch.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "651Pp_rFCkEo",
         "colab_type": "text"
       },
       "source": [
