gradient in progress

--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM0fgJiPjH/ivy0Cdx08thx",
+      "authorship_tag": "ABX9TyPbDFfp44ZzXyNlsRrq61OS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2292,7 +2292,47 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "You'll eventually end up with a network that has a very low loss on it's trianing data: a low mismatch between predictions y_pred and expected targets y. The network has \"learned\" to map its inputs to correct to correct targets."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CSMVytqDEebt",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.4.1 What's a derivative?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XeOy8U9gEvft",
+        "colab_type": "text"
+      },
+      "source": [
+        "Consider a continuous, smooth function f(x) = y, mapping a real number x to a new real number y. Because the function is *continuous*, a small change in x can only result in a small change in y-- that's the intuition behind continuity. Let's say you increase x by a small factor epsilon_x: this results in a small epsilon_y change to y:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cxNH_dlZFdm4",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "f(x + epsilon_x) = y + epsilon_y\n",
+        "```\n",
+        "In addittion, because the function is *smooth* , when epsilon_x is small enough, around a certain point *p*. it's possible to approximate *f* as a linear function of slope *a*, so that epsilon_y becomes a * epsilon_x:\n",
+        "\n",
+        "```\n",
+        "f(x + epsilon_x) = y + a * epsilon_x\n",
+        "```\n",
+        "Obviously, the linear approximation is valid only when x is close enough to *p*\n",
+        "\n",
+        "The slope a is called the *derivative* of f in p."
       ]
     }
   ]
