--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPbDFfp44ZzXyNlsRrq61OS",
+      "authorship_tag": "ABX9TyMDAm7uTR3ozYsbYc0Mu7GZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2332,7 +2332,72 @@
         "```\n",
         "Obviously, the linear approximation is valid only when x is close enough to *p*\n",
         "\n",
-        "The slope a is called the *derivative* of f in p."
+        "The slope a is called the *derivative* of f in p. If a is negative, it means a small change of x around p will result in a decrease of f(x); and if a is positive, a small chang in x will result in an increase of f(x)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GayPq-j9I2dT",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.4.2 Derivative of a tensor operation: the gradient\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2ZJ6Z1wyJB_Z",
+        "colab_type": "text"
+      },
+      "source": [
+        "A *gradient* is the derivative of a tensor operation. It's the generalization of derivatives to functions of multidimensional inputs: that is, to functions that take tensors as inputs. \n",
+        "\n",
+        "Consider an input vector *x*, a matrix *W*, a target *y*, and a loss function *loss*. You can use *W* to compute a target candidate y_pred, and comput the loss, or mismatch, between the target candidate y_pred and the target y:\n",
+        "\n",
+        "```\n",
+        "y_pred = dot(W, x)\n",
+        "loss_value = loss(y_pred, y)\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "he_p0W6ZKMvO",
+        "colab_type": "text"
+      },
+      "source": [
+        "If the data inputs x and y are frozen, then this can be interpreted as a function mapping values of *W* to loss values:\n",
+        "```\n",
+        "loss_value = f(W)\n",
+        "```\n",
+        "Let's say the current value of *W* is *W0*. Then the derivative of f in the point W0 is a tensor gradient(f)(W0) with the same shape as *W*, where each coefficient gradient(f)(wO)[i,j] indicates the direction and magnitude of the change in *loss_value* you observe whe modifying W0[i, j]. That tensor gradient (f)(wO) is the gradient of the function f(W) = loss_value in Wo.\n",
+        "\n",
+        "You saw earlier that the derivative of a function f(x) of a single coefficient can be interpreted as the slope of the curve of f. Likewise, gradient(f)(WO) can be interpreted as the tensor describing the curvature of f(W) around W0.\n",
+        "\n",
+        "For this reason, in much the same way that, for a function f(x), you can reduce the value of f(x) by moving x a little in the opposite direction from the derivative, with a function f(w) of a tensor, you can reduce f(W) by moving *W* in the opposite direction from the gradient: for example, W1 = W0 - step * gradient(f)(w0) (where step is a small scaling factor). That means going against the curvature, which intuitively should put you lower on the curve."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "97Sjv0jXNw9o",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.4.3 Stochastic gradient descent"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_90lJyeAN7mm",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
