SGD in progress

--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMDAm7uTR3ozYsbYc0Mu7GZ",
+      "authorship_tag": "ABX9TyN2iD+CQq/jXAQdACmGSCZF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2000,7 +2000,7 @@
         "              [2., 3.],\n",
         "              [4., 5.]])"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2017,7 +2017,7 @@
       "source": [
         "print(x.shape)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2038,7 +2038,7 @@
       "source": [
         "x = x.reshape((6, 1))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2055,7 +2055,7 @@
       "source": [
         "x"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2086,7 +2086,7 @@
       "source": [
         "x = x.reshape((2, 3))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2103,7 +2103,7 @@
       "source": [
         "x"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2140,7 +2140,7 @@
       "source": [
         "x = np.zeros((300, 20))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2153,7 +2153,7 @@
       "source": [
         "x = np.transpose(x)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2170,7 +2170,7 @@
       "source": [
         "print(x.shape)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2397,7 +2397,41 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        " Given a differentiable function, it's theoretically possible to find its minimum analytically; it's known that a function's minimum is a point where the derivative is 0, so all you have to do is find all the points where the derivative goes to 0 and check for which of these points the function has the lowest value."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Jci4LkbLqWgY",
+        "colab_type": "text"
+      },
+      "source": [
+        "Applied to a neural network, that means finding analytically the combination of weight values that yields the smallest possible loss function. This can be done by solving the equation gradient(f)(W)=0 for W . However this is not very practical. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wynRmuKFpYE9",
+        "colab_type": "text"
+      },
+      "source": [
+        "Instead, you can use the four-step algorithm outlined at the beginning of this section: modify the parameters little by little based on the current loss value on a random batch of data. Because you're dealing with a differentiable function, you can compute its gradient, which gives you an efficient way to implement step 4. If you update the weights in the opposite direction from the gradient, the loss will be a little less every time:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5CNH2KxasLyC",
+        "colab_type": "text"
+      },
+      "source": [
+        "1. Draw a batch of training samples x and corresponding targets y.\n",
+        "2. Run the network on x to obtain predictions y_pred.\n",
+        "3. Compute the loss of the network on the batch, a measure of the mismatch between y_pred and y.\n",
+        "4. Compute the gradient of the loss with regard to the network's parameters(*backward pass*).\n",
+        "5. Move the parameters a little in the opposite direction from the gradient--for example W -= step * gradient--thus reducing the loss on the batch a bit."
       ]
     }
   ]
