Finish in the morning

--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN2iD+CQq/jXAQdACmGSCZF",
+      "authorship_tag": "ABX9TyOuUu8VpPY6OYuF3CcSYM/M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2432,6 +2432,47 @@
         "3. Compute the loss of the network on the batch, a measure of the mismatch between y_pred and y.\n",
         "4. Compute the gradient of the loss with regard to the network's parameters(*backward pass*).\n",
         "5. Move the parameters a little in the opposite direction from the gradient--for example W -= step * gradient--thus reducing the loss on the batch a bit."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TDBN0bQ1uaKS",
+        "colab_type": "text"
+      },
+      "source": [
+        "Easy enough! What I just described is called *mini-batch stochastic gradient descent* (mini batch SGD).\n",
+        "The term *stochastic* refers to the fact that each batch of data is drawn at random( stochastic is a scientific synonym of random)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UWDbJjR7vEP6",
+        "colab_type": "text"
+      },
+      "source": [
+        "Intuitively it's important to pick a reasonable value for the *step* factor. If it's too small, the descent down the curve will take many iterations, and it could get stuck in a local minimum. If *step* is too large, your updates may end up taking you to completely random locations on the curve. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XLSzAHG9vtrc",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note that a variant of the mini-batch SGD algorithm would be to draw a single sample and target at each iteration, rather than drawing a batch of data. This would be true SGD."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8c0ZFk6AwpC2",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
