--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOuUu8VpPY6OYuF3CcSYM/M",
+      "authorship_tag": "ABX9TyPCBf4/UiYDZLBNCcEP7pjW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2469,6 +2469,55 @@
       "cell_type": "markdown",
       "metadata": {
         "id": "8c0ZFk6AwpC2",
+        "colab_type": "text"
+      },
+      "source": [
+        "Additionally, there exist multiple variants of SGD that differ by taking into account previous weight updates when computing the next weight update, rather than just looking at the current value of the gradients. There is, for instance, SGD which momentum, as well as Adagrad, RMSProp, and several others. Such variants are known as *optimization methods* or *optimizers*. In particular, the concept of *momentum*, which is used in many of these variants, deserves your attention. Momentum addresses two issues SGD: convergence speed and local minima. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Bt6E0m3Jz7ax",
+        "colab_type": "text"
+      },
+      "source": [
+        "You can avoid such issues by using momentum, which draws inspiration from physics. A useful mental image here is to think of the optimization process as a small ball rolling down the loss curve. If it has enough momentum, the ball won't get stuck in a ravine and will end up at the global minimum. Momentum is implemented by moving the ball at each stpe based not only on the current slope value (current acceleration) but also on the current velocity (resulting from past acceleration). In practice, this means updating the parameter W based not only on the current gradient value but also on the previous parameter update, naive implementation:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1EMzXFjy1bXE",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "past_velocity = 0\n",
+        "momentum = 0.1\n",
+        "while loss > 0.01:\n",
+        "    w, loss, gradient = get_current_paramaters()\n",
+        "    velocity = past_velocity * momentum - learning_rate * gradient\n",
+        "    w = w + momentum * velocity - learning_rate * gradient\n",
+        "    past_velocity = velocity\n",
+        "    update_parameter(w)\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wc1idSEV2Q87",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.4.4 Chaining derivatives: the Backpropogation algorithm"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qdFUHGVU21O4",
         "colab_type": "text"
       },
       "source": [
