--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPCBf4/UiYDZLBNCcEP7pjW",
+      "authorship_tag": "ABX9TyNzI1b9BuEiEwPg5O1xdxDg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2521,7 +2521,22 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "In the previous algorithm, we casually assumed that because a function is differentiable, we can explicitly compute its derivative. In practice, a neural network function consists of many tensor operations chained together, each of which has a simple, known derivative. For instance, this is a network f composed of three tensor operations a, b, c, with weight matrices W1, W2, W3:\n",
+        "```\n",
+        "f(W1, W2, W3) = a(W1, b(W2, c(W3)))\n",
+        "\n",
+        "```\n",
+        "Calculus tells us that such a chain of functions can be derived using the following identity, called the *chain rule:* f(g(x) = f'(g(x)) * g'(x). Applying the chain rule to the computationn of the gradient values of a neural network gives rise to an algorithm called *Backpropagation*(also sometimes called *reverse-mode differentiation*). Backpropagation starts with the final loss value and works backward from the top layers to the bottom layers, applying the chain rule to compute the contribution that each parameter had in the loss value."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r8QxX1U8Kmjw",
+        "colab_type": "text"
+      },
+      "source": [
+        "Nowadays, and for years to come, people will implement networks with modern frameworks that are capable of *symbolic differentiation*, such as TensorFlow. This means that, given a chain of operations with a known derivative, they can compute a gradient function for the chain(by applying the chain rule) that maps network parameter values to gradient values. When you have access to such a function, the backward pass is reduced to a call to this gradient function. "
       ]
     }
   ]
