--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNzI1b9BuEiEwPg5O1xdxDg",
+      "authorship_tag": "ABX9TyOPoe5q3pLPO8gD/ESe+i17",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2537,6 +2537,156 @@
       },
       "source": [
         "Nowadays, and for years to come, people will implement networks with modern frameworks that are capable of *symbolic differentiation*, such as TensorFlow. This means that, given a chain of operations with a known derivative, they can compute a gradient function for the chain(by applying the chain rule) that maps network parameter values to gradient values. When you have access to such a function, the backward pass is reduced to a call to this gradient function. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J936gZpPQUbH",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.5 Looking back at our first example"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1glD-8uGQwno",
+        "colab_type": "text"
+      },
+      "source": [
+        "This was the input data:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MXfOYQdUQ3dU",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()\n",
+        "\n",
+        "train_images = train_images.reshape((60000, 28 * 28))\n",
+        "train_images = train_images.astype('float32') / 255\n",
+        "\n",
+        "test_images = test_images.reshape((10000, 28 * 28))\n",
+        "test_images = test_images.astype('float32') / 255\n",
+        "\n",
+        "\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mwycEwmMSXBi",
+        "colab_type": "text"
+      },
+      "source": [
+        "Now you understand that the input images are stored in Numpy tensors, which are here formatted as float32 tensors of shape(60000, 784) (training data) and (10000, 784) (test data)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KpJZY7IGSzBI",
+        "colab_type": "text"
+      },
+      "source": [
+        "Our network:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yAgsjO3qS27d",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "network = models.Sequential()\n",
+        "network.add(layers.Dense(512, activation='relu', input_shape=(28 * 28,))\n",
+        "network.add(layers.Dense(10, activation='softmax'))\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LQ7Ly8Q7TZcG",
+        "colab_type": "text"
+      },
+      "source": [
+        "Now you understand that this network consists of a chain of two *Dense* layers, that each layer applies a few simple tensor operations to the input data,  and that these operations involve weight tensors. Weight tensors, which are attributes of the layers, are where the *knowledge* of the network persists."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HEG5xkpOUsLo",
+        "colab_type": "text"
+      },
+      "source": [
+        "Network compilation step:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9IDMC_aJUxh7",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "network.compile(optimizer='rmsprop',\n",
+        "                loss='categorical_crossentropy',\n",
+        "                metrics=['accuracy'])\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JYqu3XgMVMxp",
+        "colab_type": "text"
+      },
+      "source": [
+        "Now you understand that categorical_crossentropy is the loss functions that's used as feedback signal for learning the weight tensors, and which the training phase will attempt to minimize. You also know that this reduction of the loss happens via minibatch stochastic gradient descent. The exact rules governing a specific use of gradient descent are defiend by th rmsprop optimizer passed as the first argument."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HFUfooviWTs6",
+        "colab_type": "text"
+      },
+      "source": [
+        "The training loop:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FyPPZ-hqWXZb",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "network.fit(train_images, train_labels, epochs=5, batch_size=128)\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TM9zGYVPWiI9",
+        "colab_type": "text"
+      },
+      "source": [
+        "Now you understand what happens when you call fit: the network will start to iterate on the training data in mini-batches of 128 samples, 5 times over(each iteration over all the training data is called an epoch). At each iteration, the network will comput the gradients of the wieghts with regard to the loss on the batch, and update the weights accordingly. After 5 epochs, the network will have performed 2,345 gradient updates(469 per epoch), and the loss of the network will be sufficiently low that the network will be capable of classifying handwritten digits with high accuracy."
       ]
     }
   ]
